--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -225,75 +225,21 @@
                         <div class="page">
                            <div class="metr">
                                 <% @submissions.each do |submission| %>
-                                  <%= link_to 'Form '+submission.form_id.to_s+' submitted at '+submission.updated_at.to_s, controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id %>
+                                  <%# link_to 'Form '+submission.form_id.to_s+' submitted at '+submission.updated_at.to_s, controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id %>
                                    <%# link_to 'delete form', controller: "forms", action: "destroy", unique_id: submission.unique_id, class: 'delete_link' %>
-                                   <%= link_to '/form/'+submission.unique_id, method: :delete, data: {confirm: 'Are you sure?'}, class: '', :remote => true do %>
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                   <% end %>
-                                   <%= link_to controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id, {class: 'metrostyle orgmetro'} do %>
+                                   <%# link_to '/form/'+submission.unique_id, method: :delete, data: {confirm: 'Are you sure?'}, class: '', :remote => true do %>
+                                   
+                              <!--      <i class="fa fa-trash-o" aria-hidden="true"></i> -->
+                                   <%# end %>
+                                   <%= link_to({controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id}, {class: 'metrostyle metro'+submission.form_id.to_s}) do %>
                                                  <span class="metro-icon fa fa-file" style=""></span>
                                                  <span class="metro-type" style=""><%= submission.form_id.to_s %></span>
                                                  <span class="metro-date" style=""><%= submission.updated_at.to_s %></span>
                                    <% end %>
 
-                            <% end %>
-                                             <a class="metrostyle orgmetro" style="cursor: pointer" href="/form/show">
-
-                                                 <span class="metro-icon fa fa-file" style=""></span>
-                                                 <span class="metro-type" style="">1042-S</span>
-                                                 <span class="metro-date" style="">2017-07-04 18:16:08 UTC</span>
-                                             </a>
+                                <% end %>
                                              
-                                             <a style="cursor: pointer" class="metrostyle   boometro" href="/form/show">
-                                                    <span class="metro-icon fa fa-file" style=""></span>
-                                                    <span class="metro-type">8027</span>   
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC </span>
-                                                </a>
-                                             <a class="metrostyle reemetro" style="cursor: pointer" href="/form/show">
-                                                 <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em ; margin-top: 3px ;float:left"></span>
-                                                 <span class="metro-type">3922</span>
-                                                 <span class="metro-date">2017-07-04 18:16:08 UTC </span>
-                                             </a>
-                                             <a class="metrostyle yoometro" style="cursor: pointer" href="/form/show">
-
-                                                 <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em; margin-top: 3px ;float:left"></span>
-                                                 <span class="metro-type">3922</span>
-                                                 <span class="metro-date">2017-07-04 18:16:08 UTC</span>
-                                             </a>
-                                             <a class="metrostyle yoometro" style="cursor: pointer" href="/form/show">
-
-                                                 <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em; margin-top: 3px ;float:left"></span>
-                                                 <span class="metro-type">3922</span>
-                                                 <span class="metro-date">2017-07-04 18:16:08 UTC</span>
-                                             </a>
-                            </div>
-                            <div class="metr">                          
-                                                <a style="cursor: pointer" class="metrostyle eenmetro" href="/form/show">
-                                                    <span class="metro-icon fa fa-file" style="font-size:2em;color:white;padding-left:0.3em;margin-top:3px ;float:left"></span>
-                                                    <span class="metro-type">fw2g</span>   
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC</span>
-                                                </a>
-                                                 <a class="metrostyle yoometro" style="cursor: pointer" href="/form/show">
-                                                    <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em; margin-top: 3px ;float:left"></span>
-                                                    <span class="metro-type">1042-S</span>
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC </span>
-                                                </a>
-                                                <a class="metrostyle eenmetro" style="cursor: pointer" href="/form/show">
-
-                                                    <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em; margin-top: 3px ;float:left"></span>
-                                                    <span class="metro-type">8027</span>
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC</span>
-                                                </a>
-                                                <a class="metrostyle  reemetro" style="cursor: pointer" href="/form/show">
-                                                    <span class="metro-icon fa fa-file" style="font-size: 2em; color: white; padding-left: 0.3em; margin-top: 3px ;float:left"></span>
-                                                    <span class="metro-type">1042-S</span>
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC </span>
-                                                </a>
-                                                 <a class="metrostyle orgmetro" style="cursor: pointer" href="/form/show">
-                                                    <span class="metro-icon fa fa-file" style=""></span>
-                                                    <span class="metro-type">13</span>
-                                                    <span class="metro-date">2017-07-04 18:16:08 UTC</span>
-                                                </a>
+                                             
                             </div>
                         </div>
                     </div>
@@ -472,7 +418,7 @@
 span.metro-icon {
     font-size: 2em;
     color: white;
-    padding-left: 3px;
+    padding-left: 57px;
     padding-right: 27px;
     margin-top: 3px;
     float: left;
