--- a/app/assets/stylesheets/sb-admin-2.css
+++ b/app/assets/stylesheets/sb-admin-2.css
@@ -441,17 +441,17 @@ table.dataTable thead .sorting:after {
 
         .metr {
             width: auto;
-            padding: 0 1px 6px 0;
+            padding: 0;
             height: auto;
             display: table;
         }
 
         .metrostyle {
             height: 136px;
-            width: 135px;
+            width: 130px;
             float: left;
-            margin: 1px 9px 0 0;
-            padding: 2px;
+            margin: 0px 0px 9px 2px;
+           padding: 2px;
         }
 
             .metrostyle:hover {
@@ -466,18 +466,23 @@ table.dataTable thead .sorting:after {
 
         .orgmetro, .metro3922 {
             background-color: #d9dee2;
+            color:black;
         }
 
         .ueemetro {
             background-color: #272733;
+            color:white;
         }
 
         .reemetro, .metrofw2g {
             background-color: #31a063;
+            color:white;
         }
 
         .eenmetro, .metro1042-s {
             background-color: #f3f3f3;
+            color:black;
+            border: 1px solid #e4e4e4
         }
         a.eenmetro span {
           color:black!important;
@@ -485,6 +490,7 @@ table.dataTable thead .sorting:after {
 
         .boometro, .metro8027{
             background-color: #cccbd0;
+            color:white;
         }
 
         .goometro {
@@ -498,7 +504,10 @@ table.dataTable thead .sorting:after {
         .toometro {
             background-color: #e3e2e0;
         }
-
+#metro-message {
+    text-align: center;
+    margin-top: 132px;
+}
 
 /*.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
   color:#220b9e;
@@ -539,6 +548,7 @@ div.bhoechie-tab-menu div.list-group{
 }
 div.bhoechie-tab-menu div.list-group>a{
   margin-bottom: 0;
+  font-size:1.2em;
 }
 div.bhoechie-tab-menu div.list-group>a .glyphicon,
 div.bhoechie-tab-menu div.list-group>a .fa {
