--- a/app/views/forms/_form8027.html.erb
+++ b/app/views/forms/_form8027.html.erb
@@ -2,10 +2,33 @@
 <br/>
 <br/>
             <div class="row">
+                <form id="form1" action="/form/save">
+                    <div class="rel col-lg-10">
+<!-- Label part -->
+                      <div id="label-container">
+                        Label:
+                        <%= select_tag(:label, options_for_select(@labels,@form_fields['label']),{id: "label"} )%>
+                        <div id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
+                            <input id="label-other"  type="text" name="label_other" value="">
+                            <a href="#" class="btn btn-default" id="cp4">&nbsp;&nbsp;</a>
+                            <input id="label-color" type="hidden" name="label_color" value="#e4e4e4">
+                        </div>
+                      </div>
+                      <div id="labels-colors">
+                          <% @colors_array.each do |color| %>
+                          <% if @form_fields['label'] == color[0] 
+                                @additional_style = ' display:block;' 
+                             else 
+                                @additional_style = ''
+                             end %>
+                          <div style="background:<%= color[1] %>;<%= @additional_style %>" id="color-<%= color[0].delete(' ') %>" class="color-box"></div>
+                          <% end %>
+                      </div>
+<!-- end label parts -->
+                    </div>
                     <div class="rel col-lg-10">
                         <img width="100%" src="/
 media/8027.png" />
-                       <form id="form1" action="/form/save">
                           
                           <input class="abs" style="top: 8%;left: 18%;width: 30%;height: 2.4%;" name="name_of_e" value="<%= @form_fields['name_of_e']%>" placeholder="" type="text">
                           <input class="abs" style="top: 11.5%;left: 17.9%;width: 30.5%;height: 2%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
@@ -51,9 +74,9 @@ media/8027.png" />
                           <input name="form_id" value="8027" type="hidden"> 
                           <input name="unique_id" value="<%= @form_fields['unique_id'] %>" type="hidden">
 
-                        </form>
                         
                     </div>
+                </form>
             </div>
             <!-- /.row -->
 
