--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="<%= controller_name %> <%= action_name %>">
     <div id="wrapper">
 
         <!-- Navigation -->
@@ -269,7 +269,7 @@
                         </li>
 -->
                         <li>
-                            <a href="/form/index"><i class="fa fa-list-ul fa-fw"></i> Saved Forms</a>
+                            <a href="/dashboard"><i class="fa fa-list-ul fa-fw"></i> Dashboard</a>
                         </li>
 
                         <li>
