--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -7,9 +7,14 @@
                       <div id="label-container">
                         Label:
                         <%= select_tag(:label, options_for_select(@labels,@form_fields['label']),{id: "label"} )%>
-                        <div id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
-                            <input id="label-other"  type="text" name="label_other" value="">
-                            <input  class="btn btn-default" value="#e4e4e4" id="cp4" name="label_color" />
+                        <div  id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
+                            <div class="input-group">
+                              <input id="label-other"  class ="form-control" type="text" name="label_other" value="">
+                              <div class="input-group input-append color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="cp4">
+                                  <input type="text" class="form-control"  aria-describedby="basic-addon1" value="rgb(213,215,219)" name="label_color" readonly="readonly">
+                                  <span class=" add-on input-group-addon"><i style="background-color: rgb(213,215,219);"></i></span>
+                              </div>
+                            </div>
                         </div>
                       </div>
                       <div id="labels-colors">
