--- a/app/views/forms/_formfw2g.html.erb
+++ b/app/views/forms/_formfw2g.html.erb
@@ -12,7 +12,7 @@ Download Instructions</a>
                         <div  id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
                             <div class="input-group">
                               <input id="label-other"  class ="form-control" type="text" name="label_other" value="">
-                              <div class="input-group input-append color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="cp4">
+                              <div class="input-group input-append color" data-color="rgb(213,215,219)" data-color-format="rgb" id="cp4">
                                   <input type="text" class="form-control"  aria-describedby="basic-addon1" value="rgb(213,215,219)" name="label_color" readonly="readonly">
                                   <span class=" add-on input-group-addon"><i style="background-color: rgb(213,215,219);"></i></span>
                               </div>
