--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -270,7 +270,7 @@
                         </li>
 -->
                         <li>
-                            <a href="/form/index"><i class="fa fa-list-ul fa-fw"></i> Saved Forms</a>
+                            <a href="/form/index"><i class="fa fa-list-ul fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
